--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,11 @@ ja:
   errors:
     messages:
       not_saved: 登録できませんでした
+  
+  devise:
+    sessions:
+      signed_in: ログインしました
+      signed_out: ログアウトしました
 
   activerecord:
     attributes:
@@ -12,5 +17,7 @@ ja:
         address: 住所
         image_name: ルーム画像
       
-      user:
-        signed_in:  ログインしました
+      reservation:
+        start_date: 開始日
+        end_date: 終了日
+        number_of_people: 人数
